--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAYPAL_CLIENT_ID=AUK6QeUwcmhgYzcj3waU_YZxC_iWFVQq-Kc9Lg544Tk8z0zLK-KVYw2sYlVUCFRGpXHjf2XRZJmcjMju
+PAYPAL_SECRET=EKT4fXwBA5B7K5_CQ39J6BmrsGavm4qWmQrF025OKOoUTx9j_5y2-6jTbmwanAPJq3rwc6wiUnZrMhj-
+PAYPAL_MODE=sandbox
